# redis-canal

./: .coveragerc  .pre-commit-config.yaml  README.md  RELEASE.md  pyproject.toml
.github/workflows/: docker-build.yml  docker-image.yml  docker-publish.yml  lint.yml  test-deploy-depends.yml  test-example.yml  test-python-package.yml
assets/: Architecture.drawio
docker/: Dockerfile
docs/source/: conf.py  index.rst  usage.rst
example/extension/custom-adapter/: pyproject.toml
example/extension/custom-adapter/custom_adapter/: imp.py
example/extension/custom-adapter/tests/: test_custom_adapter.py
redis_canal/: __init__.py  agent.py  cli.py  connector.py  consumer.py  envs.py  exceptions.py  log.py  models.py  producer.py  tools.py  utils.py
redis_canal/adapter/: manager.py  plugin.py
redis_canal/adapter/impl/: pubsub.py  sqs.py
tests/: conftest.py  test_adapter_manager.py  test_agent.py
tests/adapter/: test_pubsub_adapter.py  test_sqs_adapter.py
tests/mock/: mock_adapter.py
