[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis_canal"
description = "redis_canal"
keywords = ["redis_canal"]
requires-python = ">=3.10"
dependencies = [
    "redis>=4.2.0rc1",
    "pydantic>=2",
    'pluggy',
    'loguru',
    "anyio",
    "click",
    "anyio",
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.optional-dependencies]
all = ["redis_canal[sqs]"]
sqs = ["boto3"]
test = [
    "pytest",
    "pytest-asyncio",
    "docker",
    "pytest-cov",
    "boto3-stubs[sqs]",
    "redis_canal[all]",
]
docs = ["Sphinx", "pydata-sphinx-theme", "sphinx-click", "autodoc_pydantic"]

[[project.authors]]
name = "wh1isper"
email = "jizhongsheng957@gmail.com"


[project.scripts]
redis-canal = "redis_canal.cli:cli"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/wh1isper/redis_canal"

[tool.check-manifest]
ignore = [".*"]

[tool.hatch.version]
path = "redis_canal/__init__.py"
